--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -c --port=8888",
-    "build-js": "webpack -p",
+    "build-js": "babel src --out-dir lib && webpack -p",
     "build-css": "lessc --clean-css src/less/input-moment.less dist/input-moment.css",
     "build": "npm run build-js && npm run build-css",
     "deploy": "npm run build && github-pages-deploy",
@@ -23,31 +23,32 @@
     "react-dom": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.1.2",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.1.2",
-    "babel-preset-react": "^6.1.2",
-    "css-loader": "^0.21.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.1",
     "github-pages-deploy": "0.0.3",
-    "jest": "^19.0.2",
+    "jest": "^20.0.3",
     "json-loader": "^0.5.4",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "less-plugin-clean-css": "^1.5.1",
-    "moment": "^2.17.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-test-renderer": "^15.4.2",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.3",
-    "webpack-dev-server": "^1.14.0"
+    "moment": "^2.18.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-test-renderer": "^15.5.4",
+    "style-loader": "^0.17.0",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "blacklist": "^1.1.4",
-    "classnames": "^2.2.0",
+    "classnames": "^2.2.5",
     "lodash": "^4.17.4",
-    "react-input-slider": "^1.5.0"
+    "react-input-slider": "^1.6.0"
   },
   "repository": {
     "type": "git",
