--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "input-moment",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "React datetime picker powered by momentjs",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -c --port=8888",
     "build-js": "babel src --out-dir lib && webpack -p",
-    "build-css": "lessc --clean-css src/less/input-moment.less dist/input-moment.css",
+    "build-css": "lessc --clean-css src/less/input-moment.less lib/input-moment.css",
     "build": "npm run build-js && npm run build-css",
     "deploy": "npm run build && github-pages-deploy",
     "test": "jest",
-    "clean": "rm dist/* && rm example/bundle*"
+    "clean": "rm dist/* && rm example/bundle*",
+    "install": "npm run build"
   },
   "github-pages-deploy": {
     "src": "example"
@@ -52,7 +53,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wangzuo/input-moment.git"
+    "url": "git+https://github.com/noahsug/input-moment.git"
   },
   "keywords": [
     "react",
@@ -63,7 +64,7 @@
     "moment"
   ],
   "bugs": {
-    "url": "https://github.com/wangzuo/input-moment/issues"
+    "url": "https://github.com/noahsug/input-moment/issues"
   },
-  "homepage": "https://github.com/wangzuo/input-moment#readme"
+  "homepage": "https://github.com/noahsug/input-moment#readme"
 }
