--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server -c --port=8888",
     "build-js": "babel src --out-dir lib && webpack -p",
-    "build-css": "lessc --clean-css src/less/input-moment.less lib/input-moment.css",
+    "build-css": "lessc --clean-css src/less/datetime-picker.less lib/datetime-picker.css",
     "build": "npm run build-js && npm run build-css",
     "deploy": "npm run build && github-pages-deploy",
     "test": "jest",
