--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React datetime picker powered by momentjs",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -c --port=8888",
+    "start": "webpack-dev-server -c --content-base example/ --port=8888",
     "build-js": "babel src --out-dir lib && webpack -p",
     "build-css": "lessc --clean-css src/less/datetime-picker.less lib/datetime-picker.css",
     "build": "npm run build-js && npm run build-css",
