--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "webpack-dev-server --content-base example/ --port=8888",
     "build-js": "babel src --out-dir lib && webpack",
     "build-css": "lessc --clean-css src/less/datetime-picker.less lib/datetime-picker.css",
-    "build": "npm run build-js && npm run build-css",
+    "build": "npm run build-css && npm run build-js",
     "deploy": "npm run build && github-pages-deploy",
-    "test": "jest",
-    "clean": "rm dist/* && rm example/bundle* && rm lib/*"
+    "clean": "rm dist/* && rm example/bundle*"
   },
   "github-pages-deploy": {
     "src": "example"
@@ -25,7 +24,6 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
-    "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
@@ -33,7 +31,6 @@
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.1",
     "github-pages-deploy": "0.0.3",
-    "jest": "^20.0.3",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
