--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --content-base example/ --port=8888",
-    "build-js": "babel src --out-dir lib && webpack",
-    "build-css": "lessc --clean-css src/less/datetime-picker.less lib/datetime-picker.css",
-    "build": "npm run build-css && npm run build-js",
+    "build": "npm run build:js && npm run build:css && webpack",
+    "build:js": "babel src --out-dir lib",
+    "build:css": "lessc --clean-css src/less/datetime-picker.less lib/datetime-picker.css",
     "deploy": "npm run build && github-pages-deploy",
-    "clean": "rm dist/* && rm example/bundle*"
+    "clean": "rimraf dist && rimraf lib && rimraf example/bundle*",
+    "prepublish": "npm run clean && npm run build"
   },
   "github-pages-deploy": {
     "src": "example"
@@ -20,6 +21,15 @@
     "moment": "^2.10.6",
     "react": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0"
+  },
+  "dependencies": {
+    "blacklist": "^1.1.4",
+    "classnames": "^2.2.5",
+    "color": "^2.0.0",
+    "jss-nested": "^5.0.0",
+    "lodash": "^4.17.4",
+    "react-input-slider": "^1.6.0",
+    "react-jss": "^7.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -39,18 +49,10 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-test-renderer": "^15.5.4",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
-    "blacklist": "^1.1.4",
-    "classnames": "^2.2.5",
-    "color": "^2.0.0",
-    "jss-nested": "^5.0.0",
-    "lodash": "^4.17.4",
-    "react-input-slider": "^1.6.0",
-    "react-jss": "^7.0.2"
   },
   "repository": {
     "type": "git",
