--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "license": "ISC",
   "peerDependencies": {
     "moment": "^2.10.6",
-    "react": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0"
+    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.0"
   },
   "dependencies": {
     "blacklist": "^1.1.4",
@@ -28,7 +28,7 @@
     "color": "^2.0.0",
     "jss-nested": "^5.0.0",
     "lodash": "^4.17.4",
-    "react-input-slider": "^1.6.0",
+    "react-input-slider": "^4.0.0",
     "react-jss": "^7.0.2"
   },
   "devDependencies": {
@@ -36,6 +36,7 @@
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-react-require": "^3.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
